syntax = "proto3";

package api.verifyCode;

option go_package = "verfiyCode/api/verifyCode;verifyCode";
option java_multiple_files = true;
option java_package = "api.verifyCode";

service VerifyCode {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
}

enum TYPE {
	DEFAULT = 0;
	DIGIT = 1;
	LETER = 2;
	MIXED = 3;
}

// 请求参数结构
message GetVerifyCodeRequest {
	uint32 length = 1;
	TYPE type = 2;
}


// 响应结构
message GetVerifyCodeReply {
	string code = 1;
}

